# AICE2004

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  accuracy-test-main.cpp  compare.cpp  conda-environment.yml  main.cpp
data/: download-fashion-mnist.sh
docs/: neural-network-crash-course.md
docs/specification/: specification.tex
include/: Arguments.h  CompileConfig.h  DataLoader.h  DataType.h  Maths.h  Matrix.h  Network.h  Train.h  Vector.h
output/knowngood-s1234-e10-l0.001-b1-z10/: losses.txt
scripts/: bench.sh  build.sh  debug.sh  profile.sh  run.sh  test.sh  time.sh
src/: Arguments.cpp  DataLoader.cpp  Maths.cpp  Matrix.cpp  Network.cpp  Train.cpp  Vector.cpp
tests/: test-example.cpp  test-maths.cpp  test-network.cpp
